MComix 0.99

    - Fixed "Go to page" dialog's thumbnail not scaling depending on dialog
      size.

    - Using the mouse wheel to scroll left now correctly advances to the
      next page in manga mode, instead of going back one page. Scrolling right
      has also been fixed.

    - Zoom is now enabled in all fit modes (best fit, fit to width, fit to
      height).

    - Added new zoom mode 'Fit to size'. This mode always stretches an image
      to a given height or width. By default, a height of 1800px is set.
      This can be changed in the preferences dialog.

    - Added new preference option for switching between different resizing
      algorithms (higher quality usually means longer page loading times).

    - Added "Scan now" button to library watch list dialog to trigger
      immediate update. Also added an option to scan directories recursively.

    - Added an option to quit the program when the ESC key is pressed. When
      disabled, ESC only exits fullscreen mode.

    - Added a new menu item to minimize the MComix window, bound to "N" by
      default.

    - Updated traditional Chinese translation (by Wayne Su).

    - Updated Italian translation (by Giovanni Scafora).

MComix 0.98
Release date: 09.04.2012

    - Fixed a bug that occasionally caused MComix to display wrong images
      after deleting an image from a directory.

    - Fixed a bug that caused MComix to jump back up after scrolling down when
      an archive was still being loaded.

    - Fixed NumLock being enabled breaking other keybindings containing
      Shift, Alt or Ctrl (e.g. smart scrolling with space).

    - The last-read-page module now falls back to pysqlite2 if sqlite3 isn't
      available.

    - The library can now scan directories for new files every time it is
      started, and automatically add new books. Watched directories can be
      edited with the "Watch list" button in the library main window.
